Fix hero background image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </nav>
     <!-- Hero section -->
     <section id="hero-section" class="text-center px-4 py-5 mt-5">
-        <h1 class="text-white section-header">Isaiah Elder</h1>
+        <h1 class="container-fluid text-white section-header">Isaiah Elder</h1>
         <div id="headshot-container">
             <img src="assets/face.png" alt="A picture of Isaiah." id="headshot" class="d-block mx-auto mb-4">
         </div>
